yaml/21-kvcp-enable-class-patch.yaml
# 21-kvcp-deploy.yaml  (ensure args DO NOT include enableLoadBalancerClass)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-vip-cloud-provider
  namespace: kube-system
spec:
  template:
    spec:
      containers:
        - name: kube-vip-cloud-provider
          image: docker.io/kubevip/kube-vip-cloud-provider:v0.0.12
          command: ["/kube-vip-cloud-provider"]
          args:
            - --leader-elect-resource-name=kube-vip-cloud-provider
            - --leader-elect-resource-namespace=kube-system
