yaml/kube-vip-cloud-provider.yaml
# 20-kube-vip-cloud-provider-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-vip-cloud-provider
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-vip-cloud-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-vip-cloud-provider
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-vip-cloud-provider
    spec:
      serviceAccountName: kube-vip-cloud-provider
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 10
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
            - weight: 10
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: Exists
      containers:
        - name: kube-vip-cloud-provider
          image: docker.io/kubevip/kube-vip-cloud-provider:v0.0.12
          imagePullPolicy: IfNotPresent
          command: ["/kube-vip-cloud-provider"]
          args:
            - --leader-elect-resource-name=kube-vip-cloud-provider
            - --leader-elect-resource-namespace=kube-system
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
