yaml/kube-vip-services-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-vip
  namespace: kube-system
  labels: { app.kubernetes.io/name: kube-vip }
spec:
  selector:
    matchLabels: { app.kubernetes.io/name: kube-vip }
  template:
    metadata:
      labels: { app.kubernetes.io/name: kube-vip }
    spec:
      hostNetwork: true
      serviceAccountName: kube-vip
      tolerations:
        - { key: node-role.kubernetes.io/control-plane, effect: NoSchedule }
        - { key: node-role.kubernetes.io/master, effect: NoSchedule }
      containers:
        - name: kube-vip
          image: docker.io/kubevip/kube-vip:latest
          args: ["manager", "--services", "--arp", "--leaderElection"]
          securityContext:
            capabilities: { add: ["NET_ADMIN","NET_RAW"] }
