yaml/3-replica-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zed-lab-web
  labels:
    app: zed-lab-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: zed-lab-web
  template:
    metadata:
      labels:
        app: zed-lab-web
    spec:
      containers:
        - name: zed-lab-web
          image: zedmanny/zededa-simple-web:latest
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: zed-lab-web
  labels:
    app: zed-lab-web
spec:
  selector:
    app: zed-lab-web
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
