yaml/dynamic-vip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-vip-test
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: my-app-vip-test
